--- a/templates/default/config.inc.php.erb
+++ b/templates/default/config.inc.php.erb
@@ -3,18 +3,19 @@
 $config = array(
   'servers' => array(
     0 => array(
-      'name' => 'local server', // Optional name.
-      'host' => '127.0.0.1',
-      'port' => 6379,
+      'name' => 'local server',
+      'host' => '<%= node[:phpredisadmin][:producHost] %>',
+      'port' => <%= node[:phpredisadmin][:producPort] %>,
 
       // Optional Redis authentication.
       //'auth' => 'redispasswordhere' // Warning: The password is sent in plain-text to the Redis server.
     ),
 
-    /*1 => array(
-      'host' => 'localhost',
-      'port' => 6380
-    ),*/
+    1 => array(
+      'name' => 'local server',
+      'host' => '<%= node[:phpredisadmin][:testHost] %>',
+      'port' => <%= node[:phpredisadmin][:testPort] %>
+    ),
 
     /*2 => array(
       'name' => 'local db 2',
